@@ -4,11 +4,20 @@
 
 /* =Background colors on rows
 -------------------------------------------------------------- */
-.js-darkgraybg {
+.row.darkgraybg .column,
+.row.lightgraybg .column,
+.panel-pane.js-darkgraybg,
+.panel-pane.js-lightgraybg {
+	padding: 42px 0;
+}
+
+.js-darkgraybg,
+.darkgraybg {
 	background-color: #353535;
 	color: #fff;
 }
-.js-lightgraybg {
+.js-lightgraybg,
+.lightgraybg {
 	background-color: #F1F1F1;
 }
 .js-darkgraybg h1, .js-darkgraybg h2, .js-darkgraybg h3, .js-darkgraybg h4, .js-darkgraybg h5, .js-darkgraybg h6, .js-darkgraybg .h1, .js-darkgraybg.h2, .js-darkgraybg .h3, .js-darkgraybg .h4, .js-darkgraybg .h5, .js-darkgraybg .h6, .js-darkgraybg h1 a, .js-darkgraybg h2 a, .js-darkgraybg h3 a, .js-darkgraybg h4 a, .js-darkgraybg h5 a, .js-darkgraybg h6 a, .js-darkgraybg .h1 a, .js-darkgraybg .h2 a, .js-darkgraybg .h3 a, .js-darkgraybg .h4 a, .js-darkgraybg .h5 a, .js-darkgraybg .h6 a {
@@ -59,5 +68,23 @@
 	margin-bottom: -42px !important;
 }
 
+.add-margin-12-above {
+	margin-top: 12px;
+}
+.add-margin-28-above {
+	margin-top: 28px;
+}
+.add-margin-42-above {
+	margin-top: 42px;
+}
+.add-margin-12-below {
+	margin-bottom: 12px;
+}
+.add-margin-28-below {
+	margin-bottom: 28px;
+}
+.add-margin-42-below {
+	margin-bottom: 42px;
+}
 
 
