@@ -7,3 +7,7 @@
 function webspark_panels_styles_ctools_plugin_directory($module, $plugin) {
   return 'plugins/' . $plugin;
 }
+
+function webspark_panels_styles_init() {
+	drupal_add_js(drupal_get_path('module', 'webspark_panels_styles') . '/plugins/styles/customstyles/js/customstyles.js', array('scope' => 'footer', 'group' => JS_THEME, 'weight' => 99));
+}
